--- a/Ionic App/app/src/app/tab2/tab2.page.html
+++ b/Ionic App/app/src/app/tab2/tab2.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>}
+<ion-content>
 
   <ion-list>
     <ng-container *ngIf="!todos || todos.length == 0">
