--- a/YGO/YGO/src/app/home/home.page.html
+++ b/YGO/YGO/src/app/home/home.page.html
@@ -25,7 +25,12 @@
       <h2><i>{{this.cardetails.desc}}</i></h2>
       <br>
       <h3><i>ATK: </i>{{this.cardetails.atk}}</h3>
-      <h3><i>DEF: </i>{{this.cardetails.def}}</h3>
+      <h3 *ngIf="this.cardetails.linkval == string"><i>DEF: </i>{{this.cardetails.def}}</h3>
+      <h3 *ngIf="this.cardetails.type == 'Link Monster'"><i>Link: </i>{{this.cardetails.linkval}}</h3>
+      <h3 *ngIf="this.cardetails.type == 'Link Monster'"><i>Markers: </i>{{this.cardetails.linkmarkers}}</h3>
+      <br>
+      <h3 *ngIf="this.cardetails.ban_tcg != null ">TGC: <i>{{this.cardetails.ban_tcg}}</i></h3>
+      <h3 *ngIf="this.cardetails.ban_tcg != null ">OCG: <i>{{this.cardetails.ban_ocg}}</i></h3>
     </ion-card-content>
   </ion-card>
 </ion-content>
