YGOLib actualizada a version final, PropinasIonic a versión final

--- a/Ionic App/app/src/app/tab1/tab1.page.html
+++ b/Ionic App/app/src/app/tab1/tab1.page.html
@@ -22,5 +22,5 @@
     <ion-input name="resultado" #resultado type="number" disabled></ion-input>
   </ion-item>
   <br>
-  <ion-button type="button" shape="round" (click)="calculate()">Activate!</ion-button>
+  <ion-button type="button" shape="round" (click)="calculate()">Calcular</ion-button>
 </ion-content>
