--- a/Ionic App/app/src/app/tabs/tabs.page.html
+++ b/Ionic App/app/src/app/tabs/tabs.page.html
@@ -10,6 +10,11 @@
       <ion-icon name="pizza"></ion-icon>
       <ion-label>Restaurantes</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="tab3">
+      <ion-icon name="construct"></ion-icon>
+      <ion-label>Configuración</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
